refactor: 정적팩토리메서드로 객체 생성